django-blogdemo-web/django-blogdemo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blogdemo-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-blogdemo-web
  template:
    metadata:
      labels:
        app: django-blogdemo-web
    spec:
      containers:
      - name: djangdjango-blogdemo-weboblog
        image: wolihi/django-blogdemo-web:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7790
