django-blogdemo-web/django-blogdemo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-blogdemo-web-svc
  namespace: default
spec:
  ports:
  - name: port
    port: 7790
    protocol: TCP
    targetPort: 7790
  selector:
    app: django-blogdemo-web
  #type: NodePort
