django-blogdemo-web/djangoblog-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-djangoblog
  namespace: default
  annotations: 
    #kubernetes.io/ingress.class: "nginx"
    wginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $http_x_forwarded_for;
spec:
  rules:
  - host: www.cornwalldev.com
    http:
      paths:
      - backend:
          serviceName: djangoblog-svc
          servicePort: 7790
        path: /
  - host: ezzysleep.com
    http:
      paths:
      - backend:
          serviceName: djangoblog-svc
          servicePort: 7790
        path: /
